--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ python = "^3.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+autopep8 = "^1.7.0"
+pylama = "^8.4.1"
+pydocstyle = "^6.1.1"
+flake8 = "^5.0.4"
+pylint = "^2.15.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
