--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pydocstyle = "^6.1.1"
 flake8 = "^5.0.4"
 pylint = "^2.15.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.1.3"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
